# flexjoint_vs

./: .gitignore  CMakeLists.txt  README.md  analysis.md
config/: proposed_no_fast.yaml  robot_config.yaml  robot_config_baseline_pd.yaml  robot_config_baseline_pd_no_fast.yaml  robot_config_proposed_no_fast.yaml
data/: camera_calibration.yaml  vision_tuned.yaml
data/experiments/: baseline_pd.yaml  baseline_pd_no_fast.yaml  example_manifest.yaml  proposed.yaml  proposed_no_fast.yaml
docs/: vcpkg-cache.md
include/: app_config.hpp  camera_utils.hpp  controller.hpp  feature_detection.hpp  feature_points.hpp  kinematics.hpp  modbus_crc.hpp  motor_client.hpp  serial_port.hpp  vision.hpp
scripts/: analyze_log_folder.py  analyze_run.py  compare_runs.py  run_20_experiments.sh  update_log_date.py
src/: app_config.cpp  camera_calibration.cpp  camera_calibration_eval.cpp  camera_feature_test.cpp  camera_utils.cpp  controller.cpp  feature_detection.cpp  kinematics.cpp  main.cpp  modbus_crc.cpp  motor_client.cpp  motor_test.cpp  serial_port.cpp  serial_port_posix.cpp  serial_port_win32.cpp  vision.cpp
